@@ -37,10 +37,6 @@
 
 /****************************************************************************/
 
-struct DateStamp __start_time;
-
-/****************************************************************************/
-
 const char * const __abbreviated_week_day_names[7] =
 {
 	"Sun",
